--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,87 @@
     transform: rotate(360deg);
   }
 }
+
+@import url('https://fonts.googleapis.com/css?family=Patrick+Hand&display=swap');
+
+html,
+body,
+.App,
+#root {
+  min-height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.App {
+  font-family: 'Arial', 'Roboto';
+  text-align: center;
+  /* background-image: linear-gradient(-315deg, #6cb4b4 40%,#d74141 100%); */
+  background-image: url("https://images.unsplash.com/photo-1520509414578-d9cbf09933a1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=649&q=80");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 32px;
+  letter-spacing: 2px;
+  color: white;
+}
+.note-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.note {
+  background: #2f76b99d;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.12), 0 5px 2px rgba(0, 0, 0, 0.24);
+  width: 100%;
+  max-width: 350px;
+  padding: 10px;
+  margin: 16px auto;
+  text-align: left;
+}
+
+h1,
+h2 {
+  margin-top: 0;
+}
+
+form {
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+}
+
+input, textarea {
+  width: 200px;
+  padding: 15px 22px;
+  margin: 10px 5px;
+  box-sizing: border-box;  
+  border: 1px solid #caf071;
+  border-radius: 4px;
+}
+button {
+  background: #7efff9;
+  background-image: linear-gradient(-315deg, #ff7e7e 40%,#5d3638 100%);
+  border: 2px solid #313030;
+  padding: 10px 15px;
+  font-size: 16px;
+  color: #191919;
+  box-shadow: 0 2px 5px 1px rgba(0, 0, 0, 0.12), 0 2px 2px 1px rgba(0, 0, 0, 0.24);
+  transition: all 0.2 ease-in;
+}
+button:hover {
+  transform: translateY(-1px);
+  box-shadow: 0 2px 6px 2px rgba(0, 0, 0, 0.12), 0 2px 3px 2px rgba(0, 0, 0, 0.24);
+  background: #ff65a3;
+}
+button:active {
+  background: #ff7eb9;
+          box-shadow: inset 0px 0px 5px #ff65a3;
+   outline: none;
+}
+
+label {
+  margin-bottom: -12px;
+  text-align: left;
+  width: 200px;
+}
